# ruspy

./: .gitignore  .pypirc  Dockerfile  Instructions.MD  README.md  pyproject.toml  setup.py  test_ruspy.py  test_ruspy_out.py  словарь
.github/workflows/: publish-to-pypi.yml
ruspy/: check_ruspy_dict.py  cli.py  trans_user_dict.py  transpiler.py
ruspy.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_transpile_batch.py  test_transpile_simple.py
